--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,12 @@
         <h1><a href="/">Ben's Blog</a></h1>
     </div>
 
+{% for post in posts %}
     <div>
-        <p>published: 15.07.2020 14:08</p>
-        <h2><a href="">First post</a></h2>
-        <p>Test post with HTML.</p>
+        <p>published: {{ post.published_date }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
     </div>
-
-    <div>
-        <p>published: 15.07.2020, 14:08</p>
-        <h2><a href="">Second post</a></h2>
-        <p>Another test post with HTML.</p>
-    </div>
+{% endfor %}
 </body>
 </html>
