--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,8 +11,13 @@
     <div class="page-header">
         {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+            <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+        {% else %}
+            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
         <h1><a href="/">Ben's Blog</a></h1>
+        <h4>by Ben Standen, University of Birmingham Student</h4>
     </div>
     <div class="content container">
         <div class="row">
@@ -21,6 +26,10 @@
             {% endblock %}
             </div>
         </div>
+    </div>
+    <div class ="page-footer">
+        <h5>Created by Ben Standen</h5>
+        <h5><a href="mailto:bjs971@student.bham.ac.uk">bjs971@student.bham.ac.uk</a></h5>
     </div>
 </body>
 </html>
