--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,10 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+    <h1>My CV</h1>
+    <iframe src="cv" title="Curriculum Vitae" height="500" width="1000"></iframe>
+    <h1>Blog</h1>
+    <h1></h1>
     {% for post in posts %}
         <div class="post">
             <div class="date">
@@ -8,6 +12,7 @@
             </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
+            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
         </div>
     {% endfor %}
 {% endblock %}
